#1310 - minor spacing fix for spinning icon when uploading form

--- a/jsapp/kobo/stylesheets/pages/form_list.scss
+++ b/jsapp/kobo/stylesheets/pages/form_list.scss
@@ -26,6 +26,9 @@
     &:hover {
         background: lighten(#39BF6E, 10%);
     }
+    i.fa {
+      margin-right: 5px;
+    }
 }
 
 .forms__addform-wrapper {
